@@ -1,3 +1,11 @@
+2010-12-09  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/45081
+	* simplify.c (is_constant_array_expr): Allow structure array
+	elements as well as constants.
+	(gfc_simplify_reshape): Copy the derived type of source to
+	the result.
+
 2010-05-22  Release Manager
 
 	* GCC 4.3.5 released.
